--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,17 @@
 	    <artifactId>xpp3</artifactId>
 	    <version>1.1.4c</version>
 	</dependency>
+	<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>servlet-api</artifactId>
+		    <version>3.0-alpha-1</version>
+		    <scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
