增加插件管理工具，可以支持插件的热部署和卸载

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
                     <excludes>
                     	<exclude>*.properties</exclude>
                     	<exclude>com/gson/WeChatFilter.java</exclude>
+                    	<exclude>com/gson/test/*</exclude>
                     </excludes>
                 </configuration>
             </plugin>
